{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "64f95380-66b9-4842-86ca-7976096eb931",
            "actions": [
                {
                    "name": "SpawnUnit",
                    "id": "2e5dfb50-edd3-4b17-8618-667a7909b590",
                    "expectedControlLayout": "",
                    "bindings": []
                },
                {
                    "name": "MoveUnits",
                    "id": "b45c1b95-f4f3-4375-a142-bf848abd9872",
                    "expectedControlLayout": "",
                    "bindings": []
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "SpawnUnit",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                },
                {
                    "name": "",
                    "path": "<Keyboard>/x",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MoveUnits",
                    "chainWithPrevious": false,
                    "isComposite": false,
                    "isPartOfComposite": false,
                    "modifiers": ""
                }
            ]
        }
    ],
    "controlSchemes": []
}